--- a/daq-mw-app/daq/component/HulScalerReader1/standalone/src/Makefile_lib
+++ b/daq-mw-app/daq/component/HulScalerReader1/standalone/src/Makefile_lib
@@ -4,21 +4,25 @@ CXXFLAGS  += -I/usr/include/daqmw
 LDFLAGS += -shared
 LIBS = -L/usr/lib64/daqmw -lSock
 
+LIBDIR = ../lib
+SRCALL		= $(wildcard *.cc)
+OBJECTS = $(addprefix $(LIBDIR)/, $(SRCALL:.cpp=.o))
+
 all: libBitDump.so\
    libUDPRBCP.so\
    libFPGAModule.so
 
 libBitDump.so: BitDump.o
-	$(CXX) $(LDFLAGS) $^ $(LIBS) -o $@
+	$(CXX) $(LDFLAGS) $^ $(LIBS) -o $(LIBDIR)/$@
   
 libUDPRBCP.so: UDPRBCP.o
-	$(CXX) $(LDFLAGS) $^ $(LIBS) -o $@
+	$(CXX) $(LDFLAGS) $^ $(LIBS) -o $(LIBDIR)/$@
 
 libFPGAModule.so: FPGAModule.o
-	$(CXX) $(LDFLAGS) $^ $(LIBS) -o $@
+	$(CXX) $(LDFLAGS) $^ $(LIBS) -o $(LIBDIR)/$@
 
-%.o: %.cc
-	$(CXX) $(CXXFLAGS)  -c -MMD $< -o $@
+#%.o: %.cc
+	#$(CXX) $(CXXFLAGS)  -c -MMD $< -o $(LIBDIR)/$@
 	
 clean:
-	rm -rf *.o *~ *.so *.d
+	rm -rf $(LIBDIR)/* *.o *~ *.so *.d
